# rinha-backend-2026

./: .gitignore  CONSTRAINTS.md  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: kdtree.rs  main.rs  simd.rs
docs/: 00-ROADMAP-16-DIAS.md  DEBUG-BUILD.md  DEVOPS.md  GLOSSARIO.md  PROMPTS.md  USUARIO.md  roteiro-video-16-llm-top5.md  thread-empatar-16-llm-top5.md
harness/: baseline.json  benchmark.sh  smoke_test.sh
lb/: Dockerfile  lb.c
resources/: README.md
scripts/: build_and_push.sh  check_constraints.sh  download_dataset.sh
